Added download links to the version 0.10
Every latest release is going to have links to both the binary and
source code downloads on the sidebar of this page.

In addition to that, I've uncommented the already existing "downloads"
link in the top navigation, which points to the Releases section in the
TEC repository.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class='header'>
 				<img src='/assets/images/header.jpg' class='header-banner' alt='Trillek'>
 				<ul class='navigation'>
-					<!-- <li><a href='https://github.com/trillek-team/tec/releases'>downloads</a></li> -->
+					<li><a href='https://github.com/trillek-team/tec/releases'>downloads</a></li>
 					<li><a href='http://blog.trillek.org/'>blog</a></li>
 					<li><a href='http://wiki.trillek.org/'>wiki</a></li>
 				</ul>
@@ -30,6 +30,12 @@
 				</div>
 
 				<div class='sidebar'>
+					<h2>Version 0.10 (June 4, 2016)</h2>
+					<ul>
+						<li>Windows: <a href="https://github.com/trillek-team/tec/releases/download/v0.10/trillek-0.10-release-win32.zip">32-bit</a></li>
+						<li>Linux: <a href="https://github.com/trillek-team/tec/releases/download/v0.10/trillek-0.10-release-linux.zip">64-bit</a></li>
+						<li>Source code: <a href="https://github.com/trillek-team/tec/archive/v0.10.zip">zip</a> | <a href="https://github.com/trillek-team/tec/archive/v0.10.tar.gz">tar.gz</a></li>
+					</ul>
 					<h2>Useful links</h2>
 					<ul>
 						<li><a href='https://github.com/trillek-team'>GitHub</a></li>
