Converted all single quotes to double quotes
This is more standard in HTML.

Also removed the remaining www's in links on the page, because it was
totally annoying to my eyes how some links have it and some do not.

--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf-8'>
+		<meta charset="utf-8">
 		<title>Trillek</title>
-		<link rel='stylesheet' type='text/css' href='/assets/css/main.css'>
-		<link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Open+Sans'>
-		<link rel='shortcut icon' href='/favicon.ico'>
+		<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
+		<link rel="shortcut icon" href="/favicon.ico">
 	</head>
 	<body>
-		<div class='container'>
-			<div class='header'>
-				<img src='/assets/images/header.jpg' class='header-banner' alt='Trillek'>
-				<ul class='navigation'>
-					<li><a href='https://github.com/trillek-team/tec/releases'>downloads</a></li>
-					<li><a href='http://blog.trillek.org/'>blog</a></li>
-					<li><a href='http://wiki.trillek.org/'>wiki</a></li>
+		<div class="container">
+			<div class="header">
+				<img src="/assets/images/header.jpg" class="header-banner" alt="Trillek">
+				<ul class="navigation">
+					<li><a href="https://github.com/trillek-team/tec/releases">downloads</a></li>
+					<li><a href="http://blog.trillek.org/">blog</a></li>
+					<li><a href="http://wiki.trillek.org/">wiki</a></li>
 				</ul>
 			</div>
 
-			<div class='content'>
-				<div class='main'>
+			<div class="content">
+				<div class="main">
 					<h2>Greetings and Salutations!</h2>
 					<p>Allow me to introduce Project Trillek, a game inspired by Notch's 0x10<sup>c</sup>.</p>
 					<p>This effort is not a buildup from the now-indefinitely delayed 0x10<sup>c</sup>, but instead a reimagining of that Sci-fi sandbox. Armed with your trusty ship, its DCPU16-based control system and a weapon or six, you too can set out to explore the Universe in a way few have ever dared to attempt. Only you can forge your destiny in Trillek&#39;s brave new world.</p>
-					<p>We&#39;re dedicated to creating a fun, challenging game that you control. From ordering your crew to prepare for FTL, to exploring the surface of some randomly-generated planet in hopes of finding evidence of a civilization long forgotten, to being chased down the halls of your own ship by an alien menace, other traders beating you to market, or even taking the fight to your fellow man before watching your ship be ripped apart while you float away in an escape pod.</p>
-					<p>This will be an epic journey in Open Source (and open space). We hope you&#39;ll enjoy the end result. But we need your help! This project comes from the Community, for the Community, and we welcome your feedback and participation as we create the ultimate space simulator.</p>
-					<p>You can find more information on our <a href='http://wiki.trillek.org/'>wiki</a>. Come and chat with us in <strong>#project-trillek</strong> at <strong>irc.freenode.net</strong>. You can view the previous logs at <a href='http://logs.trillek.org/'>logs.trillek.org</a>.</p>
+					<p>We're dedicated to creating a fun, challenging game that you control. From ordering your crew to prepare for FTL, to exploring the surface of some randomly-generated planet in hopes of finding evidence of a civilization long forgotten, to being chased down the halls of your own ship by an alien menace, other traders beating you to market, or even taking the fight to your fellow man before watching your ship be ripped apart while you float away in an escape pod.</p>
+					<p>This will be an epic journey in Open Source (and open space). We hope you'll enjoy the end result. But we need your help! This project comes from the Community, for the Community, and we welcome your feedback and participation as we create the ultimate space simulator.</p>
+					<p>You can find more information on our <a href="http://wiki.trillek.org/">wiki</a>. Come and chat with us in <strong>#project-trillek</strong> at <strong>irc.freenode.net</strong>. You can view the previous logs at <a href="http://logs.trillek.org/">logs.trillek.org</a>.</p>
 					<p>- The Trillek Team</p>
 				</div>
 
-				<div class='sidebar'>
+				<div class="sidebar">
 					<h2>Version 0.10 (June 4, 2016)</h2>
 					<ul>
 						<li>Windows: <a href="https://github.com/trillek-team/tec/releases/download/v0.10/trillek-0.10-release-win32.zip">32-bit</a></li>
@@ -38,19 +38,19 @@
 					</ul>
 					<h2>Useful links</h2>
 					<ul>
-						<li><a href='https://github.com/trillek-team'>GitHub</a></li>
-						<li><a href='https://www.openhub.net/p/trillek'>OpenHub</a></li>
-						<li><a href='http://logs.trillek.org'>IRC Logs</a></li>
-						<li><a href='https://soundcloud.com/groups/trillek'>SoundCloud</a></li>
-						<li><a href='https://www.reddit.com/r/trillek'>Reddit</a></li>
-						<li><a href='https://twitter.com/ProjectTrillek'>Twitter</a></li>
-						<li><a href='https://www.youtube.com/channel/UCwLiduJVLlwNXI3GvkORgLA'>YouTube</a></li>
-						<li><a href='https://plus.google.com/communities/105421959511147849143'>Google+</a></li>
+						<li><a href="https://github.com/trillek-team">GitHub</a></li>
+						<li><a href="https://openhub.net/p/trillek">OpenHub</a></li>
+						<li><a href="http://logs.trillek.org">IRC Logs</a></li>
+						<li><a href="https://soundcloud.com/groups/trillek">SoundCloud</a></li>
+						<li><a href="https://reddit.com/r/trillek">Reddit</a></li>
+						<li><a href="https://twitter.com/ProjectTrillek">Twitter</a></li>
+						<li><a href="https://youtube.com/channel/UCwLiduJVLlwNXI3GvkORgLA">YouTube</a></li>
+						<li><a href="https://plus.google.com/communities/105421959511147849143">Google+</a></li>
 					</ul>
 				</div>
 
-				<div class='footer'>
-					<a href='https://github.com/trillek-team' class='find-on-github'><img src='/assets/images/find-on-github.png'></a>
+				<div class="footer">
+					<a href="https://github.com/trillek-team" class="find-on-github"><img src="/assets/images/find-on-github.png"></a>
 				</div>
 			</div>
 		</div>
